Here's the commented version of the code:

```c++
# Copyright 2019 The gRPC Authors

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
"""Tests behavior around the Core channel arguments."""

import asyncio
import errno
import logging
import platform
import random
import unittest

import grpc
from grpc.experimental import aio

from src.proto.grpc.testing import messages_pb2
from src.proto.grpc.testing import test_pb2_grpc
from tests.unit.framework import common
from tests_aio.unit._test_base import AioTestBase
from tests_aio.unit._test_server import start_test_server

# Seed for random number generation to ensure test reproducibility
_RANDOM_SEED = 42

# Constants for testing SO_REUSEPORT socket option
_ENABLE_REUSE_PORT = "SO_REUSEPORT enabled"
_DISABLE_REUSE_PORT = "SO_REUSEPORT disabled"
_SOCKET_OPT_SO_REUSEPORT = "grpc.so_reuseport"
# Test options for server configuration
_OPTIONS = (
    (_ENABLE_REUSE_PORT, ((_SOCKET_OPT_SO_REUSEPORT, 1),)),
    (_DISABLE_REUSE_PORT, ((_SOCKET_OPT_SO_REUSEPORT, 0),)),
)

# Number of servers to create for testing
_NUM_SERVER_CREATED = 5

# Constants for testing max message length
_GRPC_ARG_MAX_RECEIVE_MESSAGE_LENGTH = "grpc.max_receive_message_length"
_MAX_MESSAGE_LENGTH = 1024  # Maximum allowed message length in bytes

# Error numbers related to address binding
_ADDRESS_TOKEN_ERRNO = errno.EADDRINUSE, errno.ENOSR

class _TestPointerWrapper(object):
    """Test wrapper class to simulate pointer-like behavior for channel args."""
    def __int__(self):
        return 123456

# Valid channel arguments for testing
_TEST_CHANNEL_ARGS = (
    ("arg1", b"bytes_val"),
    ("arg2", "str_val"),
    ("arg3", 1),
    (b"arg4", "str_val"),
    ("arg6", _TestPointerWrapper()),
)

# Invalid channel arguments for negative testing
_INVALID_TEST_CHANNEL_ARGS = [
    {"foo": "bar"},  # Dictionary instead of tuple
    (("key",),),     # Tuple with single element
    "str",           # Plain string
]

async def test_if_reuse_port_enabled(server: aio.Server):
    """
    Tests whether SO_REUSEPORT is actually enabled on the server.
    
    Args:
        server: The gRPC server instance to test
        
    Returns:
        bool: True if port is reusable, False if not (or if error occurs)
    """
    port = server.add_insecure_port("localhost:0")
    await server.start()

    try:
        # Try to bind to the same port to test if it's reusable
        with common.bound_socket(
            bind_address="localhost",
            port=port,
            listen=False,
        ) as (unused_host, bound_port):
            assert bound_port == port
    except OSError as e:
        if e.errno in _ADDRESS_TOKEN_ERRNO:
            return False  # Port is not reusable
        else:
            logging.exception(e)
            raise
    else:
        return True  # Port is reusable

class TestChannelArgument(AioTestBase):
    """Test class for verifying gRPC channel argument behaviors."""
    
    async def setUp(self):
        """Initialize test environment with fixed random seed."""
        random.seed(_RANDOM_SEED)

    @unittest.skipIf(
        platform.system() == "Windows",
        "SO_REUSEPORT only available in Linux-like OS.",
    )
    @unittest.skipIf(
        "aarch64" in platform.machine(),
        "SO_REUSEPORT needs to be enabled in Core's port.h.",
    )
    async def test_server_so_reuse_port_is_set_properly(self):
        """
        Tests that SO_REUSEPORT socket option is properly set on servers.
        Creates multiple servers with random SO_REUSEPORT settings and verifies
        the actual socket behavior matches the configuration.
        """
        async def test_body():
            # Randomly choose between enabled/disabled SO_REUSEPORT
            fact, options = random.choice(_OPTIONS)
            server = aio.server(options=options)
            try:
                result = await test_if_reuse_port_enabled(server)
                # Verify configuration matches actual behavior
                if fact == _ENABLE_REUSE_PORT and not result:
                    self.fail(
                        "Enabled reuse port in options, but not observed in"
                        " socket"
                    )
                elif fact == _DISABLE_REUSE_PORT and result:
                    self.fail(
                        "Disabled reuse port in options, but observed in socket"
                    )
            finally:
                await server.stop(None)

        # Run multiple tests in parallel
        await asyncio.gather(*(test_body() for _ in range(_NUM_SERVER_CREATED)))

    async def test_client(self):
        """Tests that client can be created with valid channel arguments."""
        channel = aio.insecure_channel("[::]:0", options=_TEST_CHANNEL_ARGS)
        await channel.close()

    async def test_server(self):
        """Tests that server can be created with valid channel arguments."""
        server = aio.server(options=_TEST_CHANNEL_ARGS)
        await server.stop(None)

    async def test_invalid_client_args(self):
        """Tests that invalid channel arguments raise appropriate exceptions."""
        for invalid_arg in _INVALID_TEST_CHANNEL_ARGS:
            self.assertRaises(
                (ValueError, TypeError),
                aio.insecure_channel,
                "[::]:0",
                options=invalid_arg,
            )

    async def test_max_message_length_applied(self):
        """
        Tests that max receive message length channel argument is properly enforced.
        Verifies that messages within limit are received while oversized messages
        result in RESOURCE_EXHAUSTED error.
        """
        address, server = await start_test_server()

        async with aio.insecure_channel(
            address,
            options=(
                (_GRPC_ARG_MAX_RECEIVE_MESSAGE_LENGTH, _MAX_MESSAGE_LENGTH),
            ),
        ) as channel:
            stub = test_pb2_grpc.TestServiceStub(channel)

            # Create request with two responses: one within limit, one exceeding it
            request = messages_pb2.StreamingOutputCallRequest()

            request.response_parameters.append(
                messages_pb2.ResponseParameters(
                    size=_MAX_MESSAGE_LENGTH // 2,  # Within limit
                )
            )

            request.response_parameters.append(
                messages_pb2.ResponseParameters(
                    size=_MAX_MESSAGE_LENGTH * 2,  # Exceeds limit
                )
            )

            call = stub.StreamingOutputCall(request)

            # First response should be received successfully
            response = await call.read()
            self.assertEqual(
                _MAX_MESSAGE_LENGTH // 2, len(response.payload.body)
            )

            # Second response should fail with RESOURCE_EXHAUSTED
            with self.assertRaises(aio.AioRpcError) as exception_context:
                await call.read()
            rpc_error = exception_context.exception
            self.assertEqual(
                grpc.StatusCode.RESOURCE_EXHAUSTED, rpc_error.code()
            )
            self.assertIn(str(_MAX_MESSAGE_LENGTH), rpc_error.details())

            # Verify final call status
            self.assertEqual(
                grpc.StatusCode.RESOURCE_EXHAUSTED, await call.code()
            )

        await server.stop(None)

if __name__ == "__main__":
    logging.basicConfig(level=logging.DEBUG)
    unittest.main(verbosity=2)
```